fix charmander tail flame on mobile

--- a/src/assets/cat/characters/Charmander.scss
+++ b/src/assets/cat/characters/Charmander.scss
@@ -27,14 +27,18 @@
 }
 
 #fire {
-    animation: fire 1s step-end infinite;
-    @keyframes fire {
+    transform: translate(77%, 51%);
+}
+
+#flame {
+    animation: flame 1s step-end infinite;
+    @keyframes flame {
         0%,
         100% {
-            transform: translate(77%, 51%);
+            transform: scale(1);
         }
         50% {
-            transform: translate(77%, 51%) scaleX(-1);
+            transform: scaleX(-1);
         }
     }
 }
